--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>STC</title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>STC 2023 - Sistema de Transformação Corporal</title>
+  <meta property="og:locale" content="pt_BR">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="STC 2023 - Sistema de Transformação Corporal">
+  <meta property="og:url" content="<%= BASE_URL %>StcDoAmor">
+  <meta property="og:site_name" content="Sistema de Transformação Corporal">
+  <meta property="og:description" content="Atenção: Devido a alta demanda estamos com acesso limitado. REVELADO MÉTODO BASEADO EM 5 PILARES MOSTRA COMO VOCÊ PODE EMAGRECER, DEFINIR, SE MANTER MAGRO E AINDA GOSTAR DO PROCESSO! Assista o vídeo e descubra como: Eu quero! Se você não consegue perder a barriga, não consegue controlar a ânsia de comer, perde um pouco de … Continue reading STC 2023">
+  <meta property="og:image" content="<%= BASE_URL %>assets/MARIANNA-RESULTADO-novo-e1574712135762.jpeg">
+  <link rel="icon" href="<%= BASE_URL %>assets/logo-stc-32x32.png" sizes="32x32">
+  <link rel="icon" href="<%= BASE_URL %>assets/logo-stc-192x192.png" sizes="192x192">
+  <link rel="apple-touch-icon" href="<%= BASE_URL %>assets/logo-stc-180x180.png">
+</head>
+
+<body>
+  <noscript>
+    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
+        Please enable it to continue.</strong>
+  </noscript>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
