--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,31 @@
   <meta property="og:title" content="STC 2023 - Sistema de Transformação Corporal">
   <meta property="og:url" content="<%= BASE_URL %>StcDoAmor">
   <meta property="og:site_name" content="Sistema de Transformação Corporal">
-  <meta property="og:description" content="Atenção: Devido a alta demanda estamos com acesso limitado. REVELADO MÉTODO BASEADO EM 5 PILARES MOSTRA COMO VOCÊ PODE EMAGRECER, DEFINIR, SE MANTER MAGRO E AINDA GOSTAR DO PROCESSO! Assista o vídeo e descubra como: Eu quero! Se você não consegue perder a barriga, não consegue controlar a ânsia de comer, perde um pouco de … Continue reading STC 2023">
+  <meta property="og:description"
+    content="Atenção: Devido a alta demanda estamos com acesso limitado. REVELADO MÉTODO BASEADO EM 5 PILARES MOSTRA COMO VOCÊ PODE EMAGRECER, DEFINIR, SE MANTER MAGRO E AINDA GOSTAR DO PROCESSO! Assista o vídeo e descubra como: Eu quero! Se você não consegue perder a barriga, não consegue controlar a ânsia de comer, perde um pouco de … Continue reading STC 2023">
   <meta property="og:image" content="<%= BASE_URL %>assets/MARIANNA-RESULTADO-novo-e1574712135762.jpeg">
   <link rel="icon" href="<%= BASE_URL %>assets/logo-stc-32x32.png" sizes="32x32">
   <link rel="icon" href="<%= BASE_URL %>assets/logo-stc-192x192.png" sizes="192x192">
   <link rel="apple-touch-icon" href="<%= BASE_URL %>assets/logo-stc-180x180.png">
+  <!-- Meta Pixel Code -->
+  <script>
+    !function (f, b, e, v, n, t, s) {
+      if (f.fbq) return; n = f.fbq = function () {
+        n.callMethod ?
+          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+      };
+      if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+      n.queue = []; t = b.createElement(e); t.async = !0;
+      t.src = v; s = b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t, s)
+    }(window, document, 'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '169145348811278');
+    fbq('track', 'PageView');
+  </script>
+  <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=169145348811278&ev=PageView&noscript=1" /></noscript>
+  <!-- End Meta Pixel Code -->
 </head>
 
 <body>
