--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
   <link rel="icon" href="<%= BASE_URL %>assets/logo-stc-192x192.png" sizes="192x192">
   <link rel="apple-touch-icon" href="<%= BASE_URL %>assets/logo-stc-180x180.png">
   <!-- Meta Pixel Code -->
+  <meta name="facebook-domain-verification" content="ck3q1g0qtppf9v9l0egd2pbb6jd1i5" />
   <script>
     !function (f, b, e, v, n, t, s) {
       if (f.fbq) return; n = f.fbq = function () {
