--- a/public/index.html
+++ b/public/index.html
@@ -37,9 +37,11 @@
   <noscript><img height="1" width="1" style="display:none"
       src="https://www.facebook.com/tr?id=169145348811278&ev=PageView&noscript=1" /></noscript>
   <!-- End Meta Pixel Code -->
+  <!-- FONTAWESOME -->
+  <script src="https://kit.fontawesome.com/dd928c7064.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="bg-gradient-to-r from-pink-200 to-red-100">
   <noscript>
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
         Please enable it to continue.</strong>
