--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,8 @@
   <noscript><img height="1" width="1" style="display:none"
       src="https://www.facebook.com/tr?id=593420706020898&ev=PageView&noscript=1" /></noscript>
   <!-- End Meta Pixel Code -->
+  <!-- CONFIRMATION PIXEL FACEBOOK -->
+  <meta name="facebook-domain-verification" content="5fpc7ir2om7gr2ltr0q1c35k3hal6g" />
   <!-- FONTAWESOME -->
   <script src="https://kit.fontawesome.com/dd928c7064.js" crossorigin="anonymous"></script>
 </head>
